--- a/back-end/bloco-API/package.json
+++ b/back-end/bloco-API/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "express": "^4.17.2",
     "express-rescue": "^1.1.31"
   }
