--- a/back-end/bloco-API/package.json
+++ b/back-end/bloco-API/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.2",
     "express-rescue": "^1.1.31"
   }
